<resources>
    <string name="action_share">Share</string>
    <string name="action_upload_clear">Clear</string>
    <string name="action_upload_retry">Retry</string>
    <string name="actionbar_descending">Descending</string>
    <string name="actionbar_logger">Logs</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_move">Move</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_open_with_read_only">Open with (read only)</string>
    <string name="actionbar_privacy_policy">Privacy policy</string>
    <string name="actionbar_search">Search this folder</string>
    <string name="actionbar_search_space">Search spaces</string>
    <string name="actionbar_see_details">Details</string>
    <string name="actionbar_select_all">Select all</string>
    <string name="actionbar_select_inverse">Select inverse</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_sort_title">Sort by</string>
    <string name="actionbar_sync">Refresh account</string>
    <string name="actionbar_upload">Upload</string>
    <string name="actionbar_upload_files">Files</string>
    <string name="actionbar_upload_from_apps">Content from other apps</string>
    <string name="activity_chooser_send_file_title">Send</string>
    <string name="activity_chooser_title">Send link to</string>
    <string name="apply_to_all_conflicts">Apply to all %1$s conflicts</string>
    <string name="audio_preview_label">Audio preview</string>
    <string name="auth_account_does_not_exist">Account does not exist in the device yet</string>
    <string name="auth_account_not_new">An account for the same user and server already exists on the device.</string>
    <string name="auth_account_not_the_same">The entered user does not match the user of this account.</string>
    <string name="auth_bad_oc_version_title">Unrecognized server version</string>
    <string name="auth_can_not_auth_against_server">Cannot authenticate to this server</string>
    <string name="auth_check_server">Check server</string>
    <string name="auth_connecting_auth_server">Connecting to authentication server …</string>
    <string name="auth_connection_established">Connection established</string>
    <string name="auth_expired_basic_auth_toast">Please enter the current password</string>
    <string name="auth_expired_oauth_token_toast">Your authorization expired. Please, authorize again</string>
    <string name="auth_fail_get_user_name">Your server is not returning a correct user ID. Please contact an administrator.
	</string>
    <string name="auth_failure_snackbar">Authentication failed. Sign in again to regain access.</string>
    <string name="auth_failure_snackbar_action">Change account</string>
    <string name="auth_forbidden">Forbidden authentication</string>
    <string name="auth_getting_authorization">Getting authorization&#8230;</string>
    <string name="auth_host_address">Server address</string>
    <string name="auth_host_url">Server address https://&#8230;</string>
    <string name="auth_incorrect_address_title">Wrong server address format</string>
    <string name="auth_incorrect_path_title">Server instance not found</string>
    <string name="auth_no_net_conn_title">No network connection</string>
    <string name="auth_nossl_plain_ok_title">Secure connection unavailable.</string>
    <string name="auth_not_configured_title">Malformed server configuration</string>
    <string name="auth_oauth_error">Unsuccessful authorization</string>
    <string name="auth_oauth_error_access_denied">Access denied by authorization server</string>
    <string name="auth_oauth_failure">The access token has expired or become invalid. Sign in again to regain access.</string>
    <string name="auth_oauth_failure_snackbar_action">Sign in</string>
    <string name="auth_password">Password</string>
    <string name="auth_redirect_non_secure_connection_title">Secure connection is redirected through an unsecured route.</string>
    <string name="auth_refresh_button">Refresh connection</string>
    <string name="auth_register">New to %1$s?</string>
    <string name="auth_secure_connection">Secure connection established</string>
    <string name="auth_ssl_general_error_title">SSL initialization failed</string>
    <string name="auth_testing_connection">Testing connection</string>
    <string name="auth_trying_to_login">Trying to log in&#8230;</string>
    <string name="auth_unauthorized">Wrong username or password</string>
    <string name="auth_unknown_error_title">Unknown error occurred!</string>
    <string name="auth_unsupported_auth_method">The server does not support this authentication method</string>
    <string name="auth_username">Username</string>
    <string name="auth_wrong_connection_title">Couldn\'t establish connection</string>
    <string name="auth_wtf_reenter_URL">Unexpected state; please enter the server address again</string>
    <string name="available_offline_inherited_msg">A folder containing this file is available offline.</string>
    <string name="biometric_dialog_title">Do you want to additionally activate biometric security?</string>
    <string name="biometric_not_available">Biometric unlocking is not available because the system could not provide it</string>
    <string name="biometric_not_enrolled">Register at least one biometric to use this feature.</string>
    <string name="biometric_prompt_subtitle">Log in using your biometric credential.</string>
    <string name="biometric_prompt_title">Biometric log in</string>
    <string name="bottom_nav_files">Files</string>
    <string name="bottom_nav_links">Links</string>
    <string name="bottom_nav_offline">Offline</string>
    <string name="bottom_nav_personal">Personal</string>
    <string name="bottom_nav_shares">Shares</string>
    <string name="bottom_nav_uploads">Uploads</string>
    <string name="button_later_name">LATER</string>
    <string name="button_no_thanks_name">NO, THANKS</string>
    <string name="button_rate_now_name">RATE NOW</string>
    <string name="button_role_accessibility">Button</string>
    <string name="certificate_load_problem">There is a problem loading the certificate.</string>
    <string name="change_password">Change password</string>
    <string name="choose_upload_space">Choose upload space</string>
    <string name="clean_data_account_button_yes">Clean data</string>
    <string name="clean_data_account_message">All downloaded files that are not available offline will be cleaned up for the account %1$s</string>
    <string name="clean_data_account_title">Remove local storage</string>
    <string name="clicks_to_be_developer">You are %1$d clicks away to enable developer menus</string>
    <string name="clipboard_label">Text copied from %1$s</string>
    <string name="clipboard_no_text_to_copy">No text received to copy to clipboard</string>
    <string name="clipboard_text_copied">Copied to clipboard</string>
    <string name="clipboard_uxexpected_error">Unexpected error while copying to clipboard</string>
    <string name="common_back">Back</string>
    <string name="common_cancel_sync">Cancel sync</string>
    <string name="common_choose_account">Choose account</string>
    <string name="common_error">Error</string>
    <string name="common_error_out_memory">Not enough memory</string>
    <string name="common_error_unknown">unknown error</string>
    <string name="common_important">Important</string>
    <string name="common_loading">Loading&#8230;</string>
    <string name="common_no">No</string>
    <string name="common_not_found">it was not found</string>
    <string name="common_pending">Pending</string>
    <string name="common_remove">Remove</string>
    <string name="common_remove_upload">Remove upload</string>
    <string name="common_rename">Rename</string>
    <string name="common_retry_upload">Retry upload</string>
    <string name="common_save_exit">Save &amp; exit</string>
    <string name="common_unknown">unknown</string>
    <string name="common_yes">Yes</string>
    <string name="confirmation_disable_camera_uploads_title">Confirm</string>
    <string name="confirmation_disable_pictures_upload_message">Are you sure you want to disable this feature? The pending pictures will not be uploaded.</string>
    <string name="confirmation_disable_videos_upload_message">Are you sure you want to disable this feature? The pending videos will not be uploaded.</string>
    <string name="confirmation_remove_account_alert">Do you really want to remove the account %1$s?</string>
    <string name="confirmation_remove_account_alert_camera_uploads">This account has camera uploads attached, removing the account will disable the camera uploads. Do you really want to remove the account %1$s?</string>
    <string name="confirmation_remove_file_alert">Do you really want to remove %1$s?</string>
    <string name="confirmation_remove_files_alert">Do you really want to remove these %s items?</string>
    <string name="confirmation_remove_folder_alert">Do you really want to remove %1$s and its contents?</string>
    <string name="confirmation_remove_folders_alert">Do you really want to remove the selected items and their contents?</string>
    <string name="confirmation_remove_local">Local only</string>
    <string name="confirmation_remove_private_share_title">Remove private share</string>
    <string name="confirmation_remove_public_share_title">Remove link</string>
    <string name="confirmation_remove_share_message">Do you really want to remove %1$s share?</string>
    <string name="confirmation_set_available_offline">The file was set as available offline correctly</string>
    <string name="confirmation_touches_with_other_windows_message">Use this feature at your own risk. A malicious application could try to spoof you into unknowingly performing some actions, using other views.</string>
    <string name="confirmation_touches_with_other_windows_title">Are you sure you want to enable this feature?</string>
    <string name="confirmation_unset_available_offline">The file was unset as available offline correctly</string>
    <string name="conflict_description">There is a conflict in file %1$s, tap to solve it.</string>
    <string name="conflict_keep_both">Keep both</string>
    <string name="conflict_message">Which files do you want to keep? If you select both versions, the local file will have a number added to its name.</string>
    <string name="conflict_replace">Replace</string>
    <string name="conflict_title">File in conflict</string>
    <string name="conflict_use_local_version">local version</string>
    <string name="conflict_use_server_version">server version</string>
    <string name="content_description_add_new_content">Add new content</string>
    <string name="content_description_add_new_content_expanded">Add new content expanded</string>
    <string name="content_description_add_public_link">Add public link</string>
    <string name="content_description_add_share">Add share</string>
    <string name="content_description_clean_account_storage">Clean account storage for %1$s</string>
    <string name="content_description_create_new_folder">Create new folder</string>
    <string name="fab_new_file">New document</string>
    <string name="fab_new_shortcut">New shortcut</string>
    <string name="fab_refresh_text">Refresh</string>
    <string name="filedetails_download">Download</string>
    <string name="filedetails_sync_file">Synchronize</string>
    <string name="lock_time_try_again">Please, try again in %1$s</string>
    <string name="pass_code_configure_your_pass_code_explanation">The passcode will be requested every time the app is started</string>
    <string name="pass_code_enter_pass_code">Please enter your passcode</string>
    <string name="pass_code_wrong">Incorrect passcode</string>
</resources>